feat(01-02): add authentication middleware with constant-time comparison
- AuthMiddleware function validates x-api-key header
- Uses crypto/sha256 hashing before comparison
- Uses crypto/subtle.ConstantTimeCompare to prevent timing attacks
- Pre-hashes expected key at middleware creation (not per-request)
- Returns Anthropic-format 401 errors for missing/invalid keys
- Never exposes backend provider keys in error messages
- Fix ForwardHeaders case-insensitive header matching bug
- Disable strict test linters for _test.go files in golangci config

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,10 @@ issues:
         - dupl
         - gosec
         - goconst
+        - testpackage
+        - paralleltest
+        - thelper
+        - noctx
     - path: ".*\\.pb\\.go$"
       linters:
         - all
