--- a/.golangci.yml
+++ b/.golangci.yml
@@ -39,8 +39,7 @@ issues:
   new: false
 
 output:
-  formats:
-    - format: colored-line-number
+  formats: colored-line-number
   print-issued-lines: true
   print-linter-name: true
   sort-results: true
