fix(lint): add version 2 to golangci-lint config for v2.8.0 compatibility

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,8 @@
 # golangci-lint configuration for cc-relay
 # Comprehensive linting rules for Go code quality
 
+version: 2
+
 run:
   timeout: 5m
   tests: true
