--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,4 @@
 # golangci-lint configuration for cc-relay
-# Configuration format for golangci-lint v2.x
-
-version: "2"
 
 run:
   timeout: 5m
@@ -11,16 +8,34 @@ issues:
   max-issues-per-linter: 0
   max-same-issues: 0
   new: false
+  exclude-rules:
+    - path: ".*\\.pb\\.go$"
+      linters:
+        - all
+    - path: ".*_generated\\.go$"
+      linters:
+        - all
+    - path: "_test\\.go$"
+      linters:
+        - gocyclo
+        - errcheck
+        - dupl
+        - gosec
+        - goconst
+        - testpackage
+        - paralleltest
+        - thelper
+        - noctx
+    - source: "^//go:generate "
+      linters:
+        - lll
 
 output:
-  formats: text
-  sort-order:
-    - linter
-    - file
-  show-stats: true
+  format: colored-line-number
+  print-issued-lines: true
+  print-linter-name: true
 
 linters:
-  default: standard
   enable:
     # Core linters
     - errcheck
@@ -74,201 +89,159 @@ linters:
     - funlen
     - cyclop
 
-  settings:
-    errcheck:
-      check-type-assertions: true
-      check-blank: true
-      exclude-functions:
-        - io/ioutil.ReadFile
-        - io.Copy(*bytes.Buffer)
-        - io.Copy(os.Stdout)
+linters-settings:
+  errcheck:
+    check-type-assertions: true
+    check-blank: true
+    exclude-functions:
+      - io/ioutil.ReadFile
+      - io.Copy(*bytes.Buffer)
+      - io.Copy(os.Stdout)
 
-    govet:
-      enable-all: true
-      disable:
-        - shadow
+  govet:
+    enable-all: true
+    disable:
+      - shadow
 
-    gocyclo:
-      min-complexity: 15
+  gocyclo:
+    min-complexity: 15
 
-    gocognit:
-      min-complexity: 20
+  gocognit:
+    min-complexity: 20
 
-    dupl:
-      threshold: 100
+  dupl:
+    threshold: 100
 
-    goconst:
-      min-len: 3
-      min-occurrences: 3
+  goconst:
+    min-len: 3
+    min-occurrences: 3
 
-    lll:
-      line-length: 120
-      tab-width: 4
+  lll:
+    line-length: 120
+    tab-width: 4
 
-    misspell:
-      locale: US
-      ignore-words:
-        - lefthook
+  misspell:
+    locale: US
+    ignore-words:
+      - lefthook
 
-    nakedret:
-      max-func-lines: 30
+  nakedret:
+    max-func-lines: 30
 
-    prealloc:
-      simple: true
-      range-loops: true
-      for-loops: true
+  prealloc:
+    simple: true
+    range-loops: true
+    for-loops: true
 
-    revive:
-      confidence: 0.8
-      rules:
-        - name: blank-imports
-        - name: context-as-argument
-        - name: context-keys-type
-        - name: dot-imports
-        - name: error-return
-        - name: error-strings
-        - name: error-naming
-        - name: exported
-        - name: if-return
-        - name: increment-decrement
-        - name: var-naming
-        - name: var-declaration
-        - name: package-comments
-        - name: range
-        - name: receiver-naming
-        - name: time-naming
-        - name: unexported-return
-        - name: indent-error-flow
-        - name: errorf
-        - name: empty-block
-        - name: superfluous-else
-        - name: unused-parameter
-        - name: unreachable-code
-        - name: redefines-builtin-id
+  revive:
+    confidence: 0.8
+    rules:
+      - name: blank-imports
+      - name: context-as-argument
+      - name: context-keys-type
+      - name: dot-imports
+      - name: error-return
+      - name: error-strings
+      - name: error-naming
+      - name: exported
+      - name: if-return
+      - name: increment-decrement
+      - name: var-naming
+      - name: var-declaration
+      - name: package-comments
+      - name: range
+      - name: receiver-naming
+      - name: time-naming
+      - name: unexported-return
+      - name: indent-error-flow
+      - name: errorf
+      - name: empty-block
+      - name: superfluous-else
+      - name: unused-parameter
+      - name: unreachable-code
+      - name: redefines-builtin-id
 
-    gosec:
-      excludes:
-        - G104
-        - G304
-      config:
-        global:
-          nosec: true
-          audit: true
+  gosec:
+    excludes:
+      - G104
+      - G304
+    config:
+      global:
+        nosec: true
+        audit: true
 
-    stylecheck:
-      checks:
-        - all
-        - -ST1000
-        - -ST1003
-        - -ST1016
-        - -ST1020
-        - -ST1021
-        - -ST1022
-      dot-import-whitelist:
-        - fmt
-      initialisms:
-        - ACL
-        - API
-        - ASCII
-        - CPU
-        - CSS
-        - DNS
-        - EOF
-        - GUID
-        - HTML
-        - HTTP
-        - HTTPS
-        - ID
-        - IP
-        - JSON
-        - QPS
-        - RAM
-        - RPC
-        - SLA
-        - SMTP
-        - SQL
-        - SSH
-        - TCP
-        - TLS
-        - TTL
-        - UDP
-        - UI
-        - GID
-        - UID
-        - UUID
-        - URI
-        - URL
-        - UTF8
-        - VM
-        - XML
-        - XMPP
-        - XSRF
-        - XSS
-        - SIP
-        - RTP
-        - AMQP
-        - DB
-        - TS
+  stylecheck:
+    checks:
+      - all
+      - -ST1000
+      - -ST1003
+      - -ST1016
+      - -ST1020
+      - -ST1021
+      - -ST1022
+    dot-import-whitelist:
+      - fmt
+    initialisms:
+      - ACL
+      - API
+      - ASCII
+      - CPU
+      - CSS
+      - DNS
+      - EOF
+      - GUID
+      - HTML
+      - HTTP
+      - HTTPS
+      - ID
+      - IP
+      - JSON
+      - QPS
+      - RAM
+      - RPC
+      - SLA
+      - SMTP
+      - SQL
+      - SSH
+      - TCP
+      - TLS
+      - TTL
+      - UDP
+      - UI
+      - GID
+      - UID
+      - UUID
+      - URI
+      - URL
+      - UTF8
+      - VM
+      - XML
+      - XMPP
+      - XSRF
+      - XSS
+      - SIP
+      - RTP
+      - AMQP
+      - DB
+      - TS
 
-    gci:
-      sections:
-        - standard
-        - default
-        - prefix(github.com/omarluq/cc-relay)
-      custom-order: true
+  gci:
+    sections:
+      - standard
+      - default
+      - prefix(github.com/omarluq/cc-relay)
+    custom-order: true
 
-    gocritic:
-      enabled-tags:
-        - diagnostic
-        - experimental
-        - opinionated
-        - performance
-        - style
-      disabled-checks:
-        - dupImport
-        - ifElseChain
-        - octalLiteral
-        - whyNoLint
-        - wrapperFunc
-
-  exclusions:
-    - mode: file
-      patterns:
-        - ".*\\.pb\\.go$"
-        - ".*_generated\\.go$"
-      linters:
-        - all
-
-    - mode: path
-      patterns:
-        - "_test\\.go$"
-      linters:
-        - gocyclo
-        - errcheck
-        - dupl
-        - gosec
-        - goconst
-        - testpackage
-        - paralleltest
-        - thelper
-        - noctx
-
-    - mode: source
-      patterns:
-        - "^//go:generate "
-      linters:
-        - lll
-
-    - mode: directory
-      patterns:
-        - vendor
-        - third_party
-        - go
-
-severity:
-  default: warning
-  rules:
-    - linters:
-        - gosec
-        - errcheck
-      severity: error
+  gocritic:
+    enabled-tags:
+      - diagnostic
+      - experimental
+      - opinionated
+      - performance
+      - style
+    disabled-checks:
+      - dupImport
+      - ifElseChain
+      - octalLiteral
+      - whyNoLint
+      - wrapperFunc
